--- a/.github/workflows/website_deploy.yml
+++ b/.github/workflows/website_deploy.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Convert Markdown to HTML
       run: |
         find . -name "*.md" -exec sh -c 'pandoc "$0" -o "${0%.md}.html"' {} \;
+        mv "Welcome_To_My_Notes.html" "index.html"
 
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.4.1
