--- a/.github/workflows/website_deploy.yaml
+++ b/.github/workflows/website_deploy.yaml
@@ -18,13 +18,22 @@ jobs:
 
     - name: Convert Markdown to HTML
       run: |
-        find . -name "*.md" -exec sh -c 'pandoc "$0" -o "${0%.md}.html"' {} \;
+        find . -name "*.md" -exec sh -c 'pandoc "$0" -o "${0%.md}.html}"' {} \;
         mv "Welcome To My Notes!.html" "index.html"
+
+    - name: Configure Git
+      env:
+        EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
+      run: |
+        git config --global user.email "$EMAIL_ADDRESS"
+        git config --global user.name "Your Name"
 
     - name: Delete old branch
       run: |
         git fetch origin
-        git push origin --delete pages-html || true
+        if git show-ref --quiet refs/heads/pages-html; then
+          git push origin --delete pages-html
+        fi
 
     - name: Create new branch and push changes
       run: |
