--- a/.github/workflows/website_deploy.yaml
+++ b/.github/workflows/website_deploy.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  convert:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,35 +16,27 @@ jobs:
     - name: Install Pandoc
       run: sudo apt-get install -y pandoc
 
-    - name: Convert Markdown to HTML
+    - name: Find and convert Markdown to HTML
       run: |
-        find . -name "*.md" -exec sh -c 'pandoc "$0" -o "${0%.md}.html}"' {} \;
-        mv "Welcome To My Notes!.html" "index.html"
+        find . -name "*.md" -exec sh -c 'pandoc "$0" -o "${0%.md}.html"' {} \;
 
-    - name: Configure Git
-      env:
-        EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
-      run: |
-        git config --global user.email "$EMAIL_ADDRESS"
-        git config --global user.name "Your Name"
-
-    - name: Delete old branch
+    - name: Delete html-branch if exists
       run: |
         git fetch origin
-        if git show-ref --quiet refs/heads/pages-html; then
-          git push origin --delete pages-html
+        if git show-ref --verify --quiet refs/heads/html-branch; then
+          git push origin --delete html-branch
         fi
 
-    - name: Create new branch and push changes
+    - name: Create html-branch
       run: |
-        git checkout -b pages-html
-        git add .
-        git commit -m "Deploy to GitHub Pages"
-        git push origin pages-html
+        git checkout --orphan html-branch
+        git reset --hard
 
-    - name: Deploy to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@v4.4.1
-      with:
-        branch: pages-html
-        folder: ./
-        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Move and rename Welcome page
+      run: |
+        mv "Welcome To My Notes!.md" "index.html"
+        git add index.html
+        git commit -m "Rename Welcome page to index.html"
+
+    - name: Push changes to html-branch
+      run: git push --set-upstream origin html-branch --force
