--- a/.github/workflows/website_deploy.yml
+++ b/.github/workflows/website_deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Set up Git user
       run: |
-        git config --global user.email $EMAIL_ADDRESS
+        git config --global user.email ${{secrets.EMAIL_ADDRESS}}
         git config --global user.name "TheMalevolentOne1"
 
     - name: Rename file
