--- a/.github/workflows/website_deploy.yml
+++ b/.github/workflows/website_deploy.yml
@@ -1,49 +1,50 @@
-name: Convert and Publish Markdown to HTML
-
+name: Convert Markdown to HTML and Deploy to GitHub Pages
 on:
-  push:
-    branches:
-      - html-branch
-
+ push:
+   branches:
+     - main  # Trigger the workflow on push to the main branch
+ workflow_dispatch:  # Allow manual triggering of the workflow
 jobs:
-  convert:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Install Pandoc
-        run: sudo apt-get install -y pandoc
-
-      - name: Find and convert Markdown to HTML
-        run: find . -name "*.md" -exec sh -c 'pandoc "$1" -o "${1%.md}.html"' _ {} \;
-
-      - name: Delete html-branch if exists
-        run: |
-          git fetch origin
-          if git show-ref --verify --quiet refs/heads/html-branch; then
-            git push origin --delete html-branch
-          fi
-
-      - name: Create html-branch
-        run: |
-          git checkout --orphan html-branch
-          git reset --hard
-
-      - name: Set up Git user
-        run: |
-          git config --global user.email "${{ secrets.EMAIL_ADDRESS }}"
-          git config --global user.name "TheMalevolentOne1"
-
-      - name: Move and rename HTML files
-        run: |
-          for file in $(find . -name "*.html"); do
-            mv "$file" "${file##*/}"
-          done
-          mv "Welcome To My Notes!.html" "index.html"
-          git add .
-          git commit -m "Convert Markdown to HTML and rename Welcome page to index.html"
-
-      - name: Push changes to html-branch
-        run: git push --set-upstream origin html-branch --force
+ build:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Checkout repository
+       uses: actions/checkout@v4
+     - name: Set Git user identity
+       run: |
+         git config --global user.name "TheMalevolentOne1"
+         git config --global user.email "${{ secrets.EMAIL_ADDRESS }}"
+     - name: Set up Node.js
+       uses: actions/setup-node@v3
+       with:
+         node-version: '16'
+     - name: Install markdown-to-html-cli
+       run: npm install -g markdown-to-html-cli
+     - name: Find and convert Markdown files to HTML
+       run: |
+         mkdir -p output
+         find . -name "*.md" -exec sh -c '
+           for file; do
+             output_file="output/${file%.md}.html"
+             mkdir -p "$(dirname "$output_file")"
+             markdown-to-html --source "$file" --output "$output_file"
+           done
+         ' sh {} +
+     - name: Rename "Welcome To My Notes!.html" to index.html
+       run: |
+         if [ -f "output/Welcome To My Notes!.html" ]; then
+           mv "output/Welcome To My Notes!.html" output/index.html
+         fi
+     - name: Upload artifact
+       uses: actions/upload-pages-artifact@v1
+       with:
+         path: output
+ deploy:
+   needs: build
+   runs-on: ubuntu-latest
+   permissions:
+     pages: write
+     id-token: write
+   steps:
+     - name: Deploy to GitHub Pages
+       uses: actions/deploy-pages@v1
