--- a/.github/workflows/website_deploy.yml
+++ b/.github/workflows/website_deploy.yml
@@ -1,4 +1,4 @@
-name: Convert Markdown to HTML and Deploy to GitHub Pages
+name: Convert Obsidian Markdown to HTML and Deploy to GitHub Pages
 on:
  push:
    branches:
@@ -9,27 +9,23 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - name: Checkout repository
-       uses: actions/checkout@v4
+       uses: actions/checkout@v3
      - name: Set Git user identity
        run: |
          git config --global user.name "TheMalevolentOne1"
          git config --global user.email "${{ secrets.EMAIL_ADDRESS }}"
-     - name: Set up Node.js
-       uses: actions/setup-node@v3
+     - name: Set up Python
+       uses: actions/setup-python@v4
        with:
-         node-version: '16'
-     - name: Install markdown-to-html-cli
-       run: npm install -g markdown-to-html-cli
-     - name: Find and convert Markdown files to HTML
+         python-version: '3.x'  # Specify the Python version
+     - name: Install obsidian-html
+       run: |
+         python -m pip install --upgrade pip
+         pip install git+https://github.com/kmaasrud/obsidian-html.git
+     - name: Convert Obsidian Markdown to HTML
        run: |
          mkdir -p output
-         find . -name "*.md" -exec sh -c '
-           for file; do
-             output_file="output/${file%.md}.html"
-             mkdir -p "$(dirname "$output_file")"
-             markdown-to-html --source "$file" --output "$output_file"
-           done
-         ' sh {} +
+         obsidian-html . -o output
      - name: Rename "Welcome To My Notes!.html" to index.html
        run: |
          if [ -f "output/Welcome To My Notes!.html" ]; then
