--- a/.github/workflows/website_deploy.yml
+++ b/.github/workflows/website_deploy.yml
@@ -1,46 +1,55 @@
 name: Convert Obsidian Markdown to HTML and Deploy to GitHub Pages
+
 on:
- push:
-   branches:
-     - main  # Trigger the workflow on push to the main branch
- workflow_dispatch:  # Allow manual triggering of the workflow
+  push:
+    branches:
+      - main  # Trigger the workflow on push to the main branch
+  workflow_dispatch:  # Allow manual triggering of the workflow
+
 jobs:
- build:
-   runs-on: ubuntu-latest
-   steps:
-     - name: Checkout repository
-       uses: actions/checkout@v3
-     - name: Set Git user identity
-       run: |
-         git config --global user.name "TheMalevolentOne1"
-         git config --global user.email "${{ secrets.EMAIL_ADDRESS }}"
-     - name: Set up Python
-       uses: actions/setup-python@v4
-       with:
-         python-version: '3.x'  # Specify the Python version
-     - name: Install obsidian-html
-       run: |
-         python -m pip install --upgrade pip
-         pip install git+https://github.com/kmaasrud/obsidian-html.git
-     - name: Convert Obsidian Markdown to HTML
-       run: |
-         mkdir -p output
-         obsidian-html . -o output
-     - name: Rename "Welcome To My Notes!.html" to index.html
-       run: |
-         if [ -f "output/Welcome To My Notes!.html" ]; then
-           mv "output/Welcome To My Notes!.html" output/index.html
-         fi
-     - name: Upload artifact
-       uses: actions/upload-pages-artifact@v1
-       with:
-         path: output
- deploy:
-   needs: build
-   runs-on: ubuntu-latest
-   permissions:
-     pages: write
-     id-token: write
-   steps:
-     - name: Deploy to GitHub Pages
-       uses: actions/deploy-pages@v1
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set Git user identity
+        run: |
+          git config --global user.name "TheMalevolentOne1"
+          git config --global user.email "${{ secrets.EMAIL_ADDRESS }}"
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'  # Specify the Python version
+
+      - name: Install obsidian-html
+        run: |
+          python -m pip install --upgrade pip
+          pip install git+https://${{ secrets.GITHUB_TOKEN }}@github.com/kmaasrud/obsidian-html.git
+
+      - name: Convert Obsidian Markdown to HTML
+        run: |
+          mkdir -p output
+          obsidian-html . -o output
+
+      - name: Rename "Welcome To My Notes!.html" to index.html
+        run: |
+          if [ -f "output/Welcome To My Notes!.html" ]; then
+            mv "output/Welcome To My Notes!.html" output/index.html
+          fi
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: output
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v1
