--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Convert markdown to HTML
         run: |
-          find . -name "*.md" -exec sh -c 'python -c "import markdown, sys; print(markdown.markdown(open(\"$0\").read()))" > "${0%.md}.html"' {} \;
+          find . -name "*.md" -exec sh -c 'python -c "import markdown, sys; print(markdown.markdown(open(\"$0\").read()))" > "$(basename \"${0%.md}.html\")"' {} \;
 
       - name: Configure Git
         run: |
