--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -51,6 +51,9 @@ jobs:
           git push --force origin html-branch
 
       - name: Deploy to GitHub Pages
+        permissions:
+          id-token: write
+          contents: read
         uses: actions/deploy-pages@v1
 
   workflow_dispatch:
