--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -6,54 +6,50 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+        
       - name: Set Git user identity
         run: |
           git config --global user.name "TheMalevolentOne1"
           git config --global user.email "${{ secrets.EMAIL_ADDRESS }}"
-
+          
       - name: Install Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: "latest"
-
+          
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+          
       - name: Build site with Hugo
         run: |
           hugo new site . --force
           hugo
-
-      - name: Prepare the GitHub Pages branch
-        run: |
-          git fetch --all
-          if git branch -r | grep -q "origin/html-branch"; then
-            git branch -D html-branch || true
-            git push origin --delete html-branch || true
-          fi
-          git checkout --orphan html-branch
-          git rm -rf .
-
-      - name: Copy generated files to HTML branch
-        run: |
-          cp -r public/* .
-          git add .
-          git commit -m "Generated HTML files"
-          git push --force origin html-branch
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./public
+          
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+      
+    steps:
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: deployment
+        uses: actions/deploy-pages@v4
