--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -1,16 +1,13 @@
 name: Convert Obsidian Markdown to HTML and Deploy to GitHub Pages
-
 on:
   push:
     branches:
       - main
   workflow_dispatch:
-
 permissions:
   contents: write
   pages: write
   id-token: write
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,19 +25,59 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y pandoc
           
+      - name: Create HTML template
+        run: |
+          cat > template.html << 'EOL'
+          <!DOCTYPE html>
+          <html lang="en">
+          <head>
+              <meta charset="UTF-8">
+              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+              <title>$title$</title>
+              <style>
+                  body {
+                      max-width: 800px;
+                      margin: 40px auto;
+                      padding: 0 20px;
+                      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+                      line-height: 1.6;
+                      color: #333;
+                  }
+                  a { color: #0366d6; }
+                  h1, h2, h3 { line-height: 1.2; }
+                  img { max-width: 100%; }
+              </style>
+          </head>
+          <body>
+              <h1>$title$</h1>
+              $body$
+          </body>
+          </html>
+          EOL
+          
       - name: Convert Markdown to HTML
         run: |
-          mkdir -p content/posts
-          find . -name "*.md" -not -path "./content/*" -not -path "./.git/*" -exec sh -c '
+          mkdir -p public
+          find . -name "*.md" -not -path "./public/*" -not -path "./.git/*" -exec sh -c '
             filename=$(basename "$1")
             basefilename="${filename%.*}"
             pandoc "$1" \
               --from markdown \
               --to html \
               --standalone \
+              --template=template.html \
               --metadata title:"$basefilename" \
-              --output "content/posts/${basefilename}.html"
+              --output "public/${basefilename}.html"
           ' sh {} \;
+          
+      - name: Create index page
+        run: |
+          echo "<html><head><title>Index</title><style>body { max-width: 800px; margin: 40px auto; padding: 0 20px; font-family: sans-serif; }</style></head><body><h1>Pages</h1><ul>" > public/index.html
+          find public -name "*.html" -not -name "index.html" -exec sh -c '
+            filename=$(basename "$1")
+            echo "<li><a href=\"./${filename}\">${filename%.*}</a></li>" >> public/index.html
+          ' sh {} \;
+          echo "</ul></body></html>" >> public/index.html
           
       - name: Setup Pages
         uses: actions/configure-pages@v4
